--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-gifted-charts": "^1.4.7",
+    "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
+    "react-ridge-state": "^4.2.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
